<?xml version="1.0"?>
<package>
  <name>pololu_ros</name>
  <version>0.0.0</version>
  <description>The pololu_ros package</description>
  <maintainer email="mattwilsonmbw@gmail.com">Matthew Wilson</maintainer>
  <license>MIT</license>
  <url type="website">http://github.com/matwilso/pololu_ros</url>


  <author email="mattwilsonmbw@gmail.com">Matthew Wilson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>




  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
